# gsmc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  TODO.txt  aclocal.m4  autogen.sh  autotune.c  autotune.h  calc.c  calc.h  config.h  config.h.in  configure  configure.ac  dataconv.c  dataconv.h  draw.c  draw.h  example1.eps  example1.gdt  example2.gdt  example2.ps  example3.gdt  gsmc.1.in  gtkrc  main.c  main.h  out.ps  print.c  print.h  print.old.c  untitled.gdt  widget.c  widget.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
