## Process this file with automake to produce Makefile.in
     
bin_PROGRAMS=gsmc
gsmc_SOURCES= autotune.c calc.c dataconv.c draw.c main.c print.c widget.c autotune.h calc.h dataconv.h draw.h main.h print.h widget.h
INCLUDES=@PACKAGE_CFLAGS@
LIBS=@PACKAGE_LIBS@

EXTRA_DIST=gsmc.1.in gtkrc TODO
man_MANS=gsmc.1